fix wrong font

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/*@layer base {
     html {
         font-family: 'Roboto', system-ui, sans-serif;
     }
-  }
+  }*/
